# scry

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  scry.py
.github/workflows/: publish.yml
scry/: __init__.py  cli.py  scry.py
