[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scry"
version = "0.1.0"
description = "Peer into any Python codebase. Discover structure, extract files, export for LLMs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = [
    "codebase", "export", "llm", "developer-tools", "cli",
    "project-structure", "code-sharing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Zero runtime dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
# tomli is only needed for Python < 3.11 if using .scry.toml config
legacy = ["tomli>=2.0; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/yourusername/scry"
Repository = "https://github.com/yourusername/scry"
Issues = "https://github.com/yourusername/scry/issues"

[project.scripts]
scry = "scry:main"

[tool.hatch.build.targets.wheel]
packages = ["."]