[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scry-cli"
version = "0.1.0"
description = "Peer into any Python codebase. Discover structure, extract files, export for LLMs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Alon Douek", email = "Alon.Douek@monash.edu" },
]
keywords = [
    "codebase", "export", "llm", "developer-tools", "cli",
    "project-structure", "code-sharing", "scry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
legacy = ["tomli>=2.0; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/amdouek/scry"
Repository = "https://github.com/amdouek/scry"
Issues = "https://github.com/amdouek/scry/issues"

[project.scripts]
scry = "scry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scry"]
